--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=8180
 spring.application.name=lmsapp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/lmsdb
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM:org.hibernate.dialect.MySQLDialect}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
@@ -16,3 +16,5 @@ spring.mail.username=kumarguptaraj825@gmail.com
 spring.mail.password=uhgc ufuk sgbp ipmv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+server.port=${PORT:8080}
